Added font awesome icons to classes section

--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
             </div>
             <div class="row">
                 <div class="col-6 col-md-4 ">
-                    <h5 class="font-weight-bold dark-grey-text mt-4 class-title">HIIT</h5>
+                    <h5 class="font-weight-bold dark-grey-text mt-4 class-title"><i class="fas fa-running fa-fw"></i> HIIT</h5>
                     <div class="classes-class">
                         <!-- Text used from https://www.fearlessmotivation.com/2016/09/28/no-time-for-exercise-10-reasons-why-you-should-use-hiit/  -->
                         <p class="d-none d-md-block classes-p">Every day we make great efforts at juggling demands of
@@ -280,7 +280,7 @@
                     </div>
                 </div>
                 <div class="col-6 col-md-4">
-                    <h5 class="font-weight-bold dark-grey-text mt-4 class-title">Bodypump</h5>
+                    <h5 class="font-weight-bold dark-grey-text mt-4 class-title"><i class="fas fa-dumbbell fa-fw"></i> Bodypump</h5>
                     <div class="classes-class">
                         <!-- Text used from https://www.lesmills.com/clubs-and-facilities/our-workouts/strength/bodypump/  -->
                         <p class="d-none d-md-block classes-p">BODYPUMP™ is a barbell workout for anyone looking to get
@@ -292,7 +292,7 @@
                     </div>
                 </div>
                 <div class="col-6 col-md-4">
-                    <h5 class="font-weight-bold dark-grey-text mt-4 class-title">Boxing</h5>
+                    <h5 class="font-weight-bold dark-grey-text mt-4 class-title"><i class="fas fa-fist-raised fa-fw"></i> Boxing</h5>
                     <div class="classes-class">
                         <!-- Text used from https://www.aclosport.nl/en/sport/fit-boxing/  -->
                         <p class="d-none d-md-block classes-p">Boxing is a cardio workout in which multiple elements of
@@ -305,7 +305,7 @@
                     </div>
                 </div>
                 <div class="col-6 col-md-4">
-                    <h5 class="font-weight-bold dark-grey-text mt-4 class-title">Spinning</h5>
+                    <h5 class="font-weight-bold dark-grey-text mt-4 class-title"><i class="fas fa-biking fa-fw"></i> Spinning</h5>
                     <div class="classes-class">
                         <!-- Text used from https://www.aclosport.nl/en/sport/spinning/  -->
                         <p class="d-none d-md-block classes-p">A challenging, stimulating and fun training: spinning is
@@ -318,7 +318,7 @@
                     </div>
                 </div>
                 <div class="col-6 col-md-4">
-                    <h5 class="font-weight-bold dark-grey-text mt-4 class-title">Pilates</h5>
+                    <h5 class="font-weight-bold dark-grey-text mt-4 class-title"><i class="fas fa-child fa-fw"></i>Pilates</h5>
                     <div class="classes-class">
                         <!-- Text used from https://www.bodyvita.nl/en/  -->
                         <p class="d-none d-md-block classes-p">Pilates is an innovative and safe way of movement and
@@ -331,7 +331,7 @@
                     </div>
                 </div>
                 <div class="col-6 col-md-4">
-                    <h5 class="font-weight-bold dark-grey-text mt-4 class-title">Yoga</h5>
+                    <h5 class="font-weight-bold dark-grey-text mt-4 class-title"><i class="fas fa-spa fa-fw"></i> Yoga</h5>
                     <div class="classes-class">
                         <!-- Text used from https://www.nytimes.com/guides/well/beginner-yoga  -->
                         <p class="d-none d-md-block classes-p">It’s time to roll out your yoga mat and discover the
