Debugged HTML with w3 validation

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <nav id="navbar" class="navbar navbar-expand-sm navbar-dark fixed-top">
                 <!-- Navbar Logo -->
                 <a href="#home" class="navbar-brand"><img src="assets/images/logo/logo-small.png" height="50"
-                        width="110" id="logo-footer" alt="Click to go back to top of page"></a>
+                        width="110" id="logo-nav" alt="Click to go back to top of page"></a>
                 <!-- Navigation toggle-->
                 <button class="navbar-toggler" data-toggle="collapse" data-target="#navbar-menu" type="button"
                     aria-controls="navbar-menu" aria-expanded="false" aria-label="toggle-navigation">
@@ -267,7 +267,8 @@
             </div>
             <div class="row">
                 <div class="col-6 col-md-4 ">
-                    <h5 class="font-weight-bold dark-grey-text mt-4 class-title"><i class="fas fa-running fa-fw"></i> HIIT</h5>
+                    <h5 class="font-weight-bold dark-grey-text mt-4 class-title"><i class="fas fa-running fa-fw"></i>
+                        HIIT</h5>
                     <div class="classes-class">
                         <!-- Text used from https://www.fearlessmotivation.com/2016/09/28/no-time-for-exercise-10-reasons-why-you-should-use-hiit/  -->
                         <p class="d-none d-md-block classes-p">Every day we make great efforts at juggling demands of
@@ -280,7 +281,8 @@
                     </div>
                 </div>
                 <div class="col-6 col-md-4">
-                    <h5 class="font-weight-bold dark-grey-text mt-4 class-title"><i class="fas fa-dumbbell fa-fw"></i> Bodypump</h5>
+                    <h5 class="font-weight-bold dark-grey-text mt-4 class-title"><i class="fas fa-dumbbell fa-fw"></i>
+                        Bodypump</h5>
                     <div class="classes-class">
                         <!-- Text used from https://www.lesmills.com/clubs-and-facilities/our-workouts/strength/bodypump/  -->
                         <p class="d-none d-md-block classes-p">BODYPUMP™ is a barbell workout for anyone looking to get
@@ -292,7 +294,8 @@
                     </div>
                 </div>
                 <div class="col-6 col-md-4">
-                    <h5 class="font-weight-bold dark-grey-text mt-4 class-title"><i class="fas fa-fist-raised fa-fw"></i> Boxing</h5>
+                    <h5 class="font-weight-bold dark-grey-text mt-4 class-title"><i
+                            class="fas fa-fist-raised fa-fw"></i> Boxing</h5>
                     <div class="classes-class">
                         <!-- Text used from https://www.aclosport.nl/en/sport/fit-boxing/  -->
                         <p class="d-none d-md-block classes-p">Boxing is a cardio workout in which multiple elements of
@@ -305,7 +308,8 @@
                     </div>
                 </div>
                 <div class="col-6 col-md-4">
-                    <h5 class="font-weight-bold dark-grey-text mt-4 class-title"><i class="fas fa-biking fa-fw"></i> Spinning</h5>
+                    <h5 class="font-weight-bold dark-grey-text mt-4 class-title"><i class="fas fa-biking fa-fw"></i>
+                        Spinning</h5>
                     <div class="classes-class">
                         <!-- Text used from https://www.aclosport.nl/en/sport/spinning/  -->
                         <p class="d-none d-md-block classes-p">A challenging, stimulating and fun training: spinning is
@@ -318,7 +322,8 @@
                     </div>
                 </div>
                 <div class="col-6 col-md-4">
-                    <h5 class="font-weight-bold dark-grey-text mt-4 class-title"><i class="fas fa-child fa-fw"></i>Pilates</h5>
+                    <h5 class="font-weight-bold dark-grey-text mt-4 class-title"><i
+                            class="fas fa-child fa-fw"></i>Pilates</h5>
                     <div class="classes-class">
                         <!-- Text used from https://www.bodyvita.nl/en/  -->
                         <p class="d-none d-md-block classes-p">Pilates is an innovative and safe way of movement and
@@ -331,7 +336,8 @@
                     </div>
                 </div>
                 <div class="col-6 col-md-4">
-                    <h5 class="font-weight-bold dark-grey-text mt-4 class-title"><i class="fas fa-spa fa-fw"></i> Yoga</h5>
+                    <h5 class="font-weight-bold dark-grey-text mt-4 class-title"><i class="fas fa-spa fa-fw"></i> Yoga
+                    </h5>
                     <div class="classes-class">
                         <!-- Text used from https://www.nytimes.com/guides/well/beginner-yoga  -->
                         <p class="d-none d-md-block classes-p">It’s time to roll out your yoga mat and discover the
@@ -449,29 +455,29 @@
                 <form id="contact-form">
                     <div class="form-group">
                         <label for="name" class="col-8 d-inline-block font-weight-bold dark-grey-text"
-                            aria-describedby="full name">Full Name</label>
+                            aria-describedby="name">Full Name</label>
                         <input class="col-8 form-input" type="text" id="name" name="name" placeholder="- Full Name -">
                     </div>
                     <div class="form-group">
                         <label for="tel" class="col-8 d-inline-block font-weight-bold dark-grey-text"
-                            aria-describedby="Telephone">Telephone
+                            aria-describedby="tel">Telephone
                             Number</label>
                         <input class="col-8 form-input" type="tel" id="tel" name="tel" placeholder="- Phone Number -">
                     </div>
                     <div class="form-group">
                         <label for="email" class="col-8 d-inline-block font-weight-bold dark-grey-text"
-                            aria-describedby="emailHelp">Email
+                            aria-describedby="email">Email
                             Address</label>
                         <input class="col-8 form-input" type="email" id="email" name="email"
                             placeholder="- Email Address -">
                     </div>
                     <div class="form-group">
                         <label for="info" class="col-8 d-inline-block font-weight-bold dark-grey-text"
-                            aria-describedby="input message">Your
+                            aria-describedby="info">Your
                             Message</label>
                         <textarea class="col-8 form-input" name="info" id="info"
                             placeholder="- Write your message here. -"></textarea>
-                        <p class="text-muted-form contact-form-p"><small id="info" class="form-text text-muted">We'll
+                        <p class="text-muted contact-form-p"><small>We'll
                                 never share your personal details with anyone else.</small></p>
                     </div>
                     <button type="Submit" value="Submit" class="btn-slide-red" id="btn-contact">Submit</button>
@@ -483,11 +489,11 @@
     <!-- Sign IN Modal -->
     <!-- https://getbootstrap.com/docs/4.6/components/modal/  -->
     <!-- Based on https://getbootstrap.com/docs/4.6/components/forms/ -->
-    <div class="modal fade" id="signin-modal" tabindex="-1" aria-labelledby="signin-modal" aria-hidden="true">
+    <div class="modal fade" id="signin-modal-one" tabindex="-1" aria-labelledby="signin-modal-one" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h3 class="modal-signin col-12" id="signin-modal">Sign In</h3>
+                    <h3 class="modal-signin1 col-12" id="signin-modal-two">Sign In</h3>
                     <button type="button" class="close" data-dismiss="modal" aria-label="close">
                         <span aria-hidden="true">&times;</span>
                     </button>
@@ -496,21 +502,21 @@
                     <form class="text-center">
                         <div class="form-group">
                             <label for="email">Email address</label>
-                            <input type="email" class="form-control" id="email" aria-describedby="email-help"
+                            <input type="email" class="form-control" id="email1" aria-describedby="email-help-signin"
                                 placeholder="Enter Email Address Here" required>
-                            <small id="email-help" class="form-text text-muted">We'll never share your email
+                            <small id="email-help-signin" class="form-text text-muted">We'll never share your email
                                 with
                                 anyone else.</small>
                         </div>
                         <div class="form-group">
-                            <label for="password">Password</label>
-                            <input type="password" class="form-control" id="password" aria-describedby="Password"
-                                placeholder="Enter Password Here" required>
+                            <label for="Password-signin">Password</label>
+                            <input type="password" class="form-control" id="Password-signin"
+                                aria-describedby="Password-signin" placeholder="Enter Password Here" required>
                         </div>
                         <div class="form-group">
-                            <label for="repeat-password">Repeat Password</label>
-                            <input type="password" class="form-control" id="repeat-password"
-                                placeholder="Enter Repeat Password" required>
+                            <label for="repeat-password-signin">Repeat Password</label>
+                            <input type="password" class="form-control" id="repeat-password-signin"
+                                 aria-describedby="repeat-password-signin" placeholder="Enter Repeat Password" required>
                         </div>
                         <div class="form-group form-check">
                             <input type="checkbox" checked="checked" class="form-check-input" id="modal-checkbox">
@@ -534,7 +540,7 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h3 class="modal-signup col-12" id="signup-modal">Sign Up Form</h3>
+                    <h3 class="modal-signup col-12" id="signup-modal-three">Sign Up Form</h3>
                     <button type="button" class="close" data-dismiss="modal" aria-label="close">
                         <span aria-hidden="true">&times;</span>
                     </button>
@@ -596,9 +602,10 @@
 
     <footer id="footer">
         <div class="container-fluid footer-container">
-            <section id="footer">
+            <section class="footer-sector">
                 <div class="row justify-content-between">
-                    <div class="col-4 opening">
+                    <div class="col-4 opening">      
+                            <h5>Opening times</h5>
                         <table>
                             <tr class="text-center">
                                 <th class="opening">Monday</th>
