--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
     <!-- Sticky social bar is based on https://www.w3schools.com/howto/howto_css_sticky_social_bar.asp -->
 
-    <div class="socials-side">
+    <div class="socials-side d-none d-sm-block">
         <a href="https://www.facebook.com" target="_blank" rel="noopener" class="facebook"><i
                 class="fab fa-facebook-square"></i></a>
         <a href="https://www.instagram.com" target="_blank" rel="noopener" class="instagram"><i
@@ -356,7 +356,7 @@
 
     <!-- Timetable -->
     <!-- Based on https://getbootstrap.com/docs/4.0/content/tables/  -->
-    <div class="container schedule-container d-none d-lg-block">
+    <div class="container timetable-container d-none d-lg-block">
         <section id="timetable" class="container">
             <div>
                 <div>
@@ -637,11 +637,11 @@
                             </tr>
                         </table>
                     </div>
-                    <div class="col-4 d-none d-md-block text-center align-self-center">
+                    <div class="col-4 d-none d-md-block text-center">
                         <a href="#home"><img src="assets/images/logo/logo-small.png" height="110" width="220"
                                 id="logo-footer" alt="Click to go back to top of page"></a>
                     </div>
-                    <div id="social-button-footer" class="social-buttons col-4 d-none d-sm-block d-md-none">
+                    <div class="social-buttons col-4 d-sm-none items-align-center">
                         <a href="https://www.facebook.com/" target="_blank" rel="noopener"><i
                                 class="fab fa-facebook-square"><span class="sr-only">Facebook</span></i></a>
                         <a href="https://www.instagram.com/" target="_blank" rel="noopener"><i
